// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsOperatorsEdit > renders correctly if checklists are disabled 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      New: operator
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              filled="true"
              grow="false"
              hint="First name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              persistent-hint=""
              placeholder="First name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('First name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              counter="100"
              filled="true"
              grow="false"
              hint="Last name"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue=""
              persistent-hint=""
              placeholder="Last name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('Last name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="false"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups="[object Object],[object Object]"
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Stations"
              inverted="false"
              isgroupedselect="true"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Stations"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsOperatorsEdit > renders correctly if operator has passcode generated 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      First2 Last2
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              filled="true"
              grow="false"
              hint="First name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue="First2"
              persistent-hint=""
              placeholder="First name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('First name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              counter="100"
              filled="true"
              grow="false"
              hint="Last name"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue="Last2"
              persistent-hint=""
              placeholder="Last name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('Last name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="false"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups="[object Object],[object Object]"
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Stations"
              inverted="false"
              isgroupedselect="true"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Stations"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Checklists authentication
          </span>
          <icon-with-tooltip-stub
            additionalclasses="ml-1 position-absolute"
            color=""
            data-v-4db4f123=""
            icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="top"
            tooltiptext="Learn more"
          />
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        />
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <list-card-stub
        buttonparams="[object Object]"
        cardbuttons="[object Object]"
        class="mx-1"
        flagiconcode=""
        icon="M7 14C5.9 14 5 13.1 5 12S5.9 10 7 10 9 10.9 9 12 8.1 14 7 14M12.6 10C11.8 7.7 9.6 6 7 6C3.7 6 1 8.7 1 12S3.7 18 7 18C9.6 18 11.8 16.3 12.6 14H16V18H20V14H23V10H12.6Z"
        primaryactiontext="Regenerate"
        subtitlekeyvaluepairs="[object Object]"
        title="Passcode"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsOperatorsEdit > renders correctly if selected operator is not in operatorsMap 1`] = `<removed-entity-view-stub />`;

exports[`SettingsOperatorsEdit > renders correctly in new operator view 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      New: operator
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              filled="true"
              grow="false"
              hint="First name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              persistent-hint=""
              placeholder="First name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('First name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              counter="100"
              filled="true"
              grow="false"
              hint="Last name"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue=""
              persistent-hint=""
              placeholder="Last name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('Last name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="false"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups="[object Object],[object Object]"
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Stations"
              inverted="false"
              isgroupedselect="true"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Stations"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Checklists authentication
          </span>
          <icon-with-tooltip-stub
            additionalclasses="ml-1 position-absolute"
            color=""
            data-v-4db4f123=""
            icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="top"
            tooltiptext="Learn more"
          />
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        />
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <info-block-stub
        body="Please save the operator details first, then return to generate a passcode."
        class="mx-1"
        collapsible="false"
        color="#9E9E9E"
        header=""
        headertextcolor="text-secondary-text"
        icon="M11,15H13V17H11V15M11,7H13V13H11V7M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20Z"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsOperatorsEdit > renders correctly in operator edit view 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      First1 Last1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              filled="true"
              grow="false"
              hint="First name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue="First1"
              persistent-hint=""
              placeholder="First name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('First name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              counter="100"
              filled="true"
              grow="false"
              hint="Last name"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue="Last1"
              persistent-hint=""
              placeholder="Last name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('Last name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="false"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups="[object Object],[object Object]"
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Stations"
              inverted="false"
              isgroupedselect="true"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Stations"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Checklists authentication
          </span>
          <icon-with-tooltip-stub
            additionalclasses="ml-1 position-absolute"
            color=""
            data-v-4db4f123=""
            icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="top"
            tooltiptext="Learn more"
          />
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        />
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <list-card-stub
        buttonparams="[object Object]"
        cardbuttons=""
        class="mx-1"
        flagiconcode=""
        icon="M7 14C5.9 14 5 13.1 5 12S5.9 10 7 10 9 10.9 9 12 8.1 14 7 14M12.6 10C11.8 7.7 9.6 6 7 6C3.7 6 1 8.7 1 12S3.7 18 7 18C9.6 18 11.8 16.3 12.6 14H16V18H20V14H23V10H12.6Z"
        primaryactiontext="Generate"
        subtitlekeyvaluepairs=""
        title="No passcode created"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;
